@@ -13,7 +13,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
-
 import com.ssafy.searchserver.interfaces.country.dto.*;
 
 import org.springframework.kafka.core.KafkaTemplate;
@@ -39,13 +38,15 @@ public class CountryService {
 	private final ElasticsearchClient esClient;
 	private final KafkaTemplate<String, String> kafkaTemplate;
 	private final ObjectMapper objectMapper;
-	private final Map<String, CompletableFuture<String>> pendingCompareResults = new ConcurrentHashMap<>();
+	private final Map<String, CompletableFuture<?>> pendingCompareResults = new ConcurrentHashMap<>();
 
-	public DashboardData getDashboard(String category, int period, String keyword, String keywordMind,
-		String keywordCloud, String country, boolean isKorea) {
+	public DashboardData getDashboard(String category, int period, String keyword, String keywordMind, String country,
+		boolean isKorea) {
 		try {
 			LocalDateTime now = LocalDateTime.now();
 			LocalDateTime from = now.minusDays(period);
+			String requestId = UUID.randomUUID().toString();
+			int size = keywordMind.isEmpty() ? 21 : 22;
 
 			// 필터링 Query
 			Query boolQuery = Query.of(q -> q.bool(b -> {
@@ -63,12 +64,6 @@ public class CountryService {
 					)));
 				}
 
-				if (!keywordCloud.isEmpty()) {
-					mustQueries.add(Query.of(m -> m.term(t -> t
-						.field("keywords")
-						.value(FieldValue.of(keywordCloud))
-					)));
-				}
 
 				mustQueries.add(Query.of(m -> m.term(t -> t
 					.field("country")
@@ -94,7 +89,7 @@ public class CountryService {
 			Aggregation agg = Aggregation.of(a -> a
 				.terms(t -> t
 					.field("keywords")
-					.size(20)
+					.size(size)
 				)
 			);
 
@@ -116,16 +111,7 @@ public class CountryService {
 				.map(hit -> hit.source().getId())
 				.collect(Collectors.toList());
 
-			// kafka로 전달할 payload에 newsIds, page, size를 함께 포함
-			Map<String, Object> payload = new HashMap<>();
-			payload.put("newsIds", idList);
-			payload.put("period", period);
-
-			// Map을 JSON 문자열로 변환 & kafka로 전송
-			String json = objectMapper.writeValueAsString(payload);
-			kafkaTemplate.send("dashboard", json);
-
-			// 4. Aggregation 처리
+			// Aggregation 처리
 			StringTermsAggregate aggregation = response.aggregations()
 				.get("word_cloud")
 				.sterms();
@@ -133,19 +119,39 @@ public class CountryService {
 			List<KeywordResponse> wordCloud = aggregation.buckets().array().stream()
 				.filter(rel -> !rel.equals(keyword)) // keyword1과 중복 제거
 				.filter(rel -> !rel.equals(keywordMind))
-				.filter(rel -> !rel.equals(keywordCloud))
 				.map(bucket -> KeywordResponse.builder()
 					.name(bucket.key().stringValue())
 					.count(bucket.docCount())
 					.build())
-				.collect(Collectors.toList());
+				.toList();
 
-			System.out.println("워드 클라우드");
-			for (KeywordResponse keywordResponse : wordCloud) {
-				System.out.println(keywordResponse.toString());
-			}
+			// kafka로 전달할 payload에 newsIds, page, size를 함께 포함
+			Map<String, Object> payload = new HashMap<>();
+			payload.put("newsIds", idList);
+			payload.put("period", period);
+			payload.put("keyword", keyword);
+			payload.put("keyword-mind", keywordMind);
+			payload.put("wordCloud", wordCloud);
+			payload.put("requestId", requestId);
+			payload.put("country", country);
+			payload.put("callbackUrl", "http://localhost:8080/api/search/country/dashboard-callback");
 
-			return DashboardData.builder().keywords(wordCloud).build();
+			// System.out.println("워드 클라우드");
+			// for (KeywordResponse keywordResponse : wordCloud) {
+			// 	System.out.println(keywordResponse.toString());
+			// }
+
+			CompletableFuture<DashboardData> future = new CompletableFuture<>();
+			pendingCompareResults.put(requestId, future);
+
+			// Map을 JSON 문자열로 변환 & kafka로 전송
+			String json = objectMapper.writeValueAsString(payload);
+			kafkaTemplate.send("dashboard", json);
+
+			// 5초 대기
+			DashboardData data = future.get(5, TimeUnit.SECONDS);
+
+			return data;
 		} catch (Exception e) {
 			throw new RuntimeException("Dashboard 데이터 검색 실패", e);
 		}
@@ -193,7 +199,7 @@ public class CountryService {
 		}
 	}
 
-	public CompletableFuture<String> removeFuture(String requestId) {
+	public CompletableFuture<?> removeFuture(String requestId) {
 		return pendingCompareResults.remove(requestId);
 	}
 
@@ -245,6 +251,7 @@ public class CountryService {
 		try {
 			LocalDateTime now = LocalDateTime.now();
 			LocalDateTime from = now.minusDays(period);
+			String requestId = UUID.randomUUID().toString();
 
 			// 필터링 Query
 			Query boolQuery = Query.of(q -> q.bool(b -> {
@@ -311,12 +318,20 @@ public class CountryService {
             payload.put("newsIds", idList);
             payload.put("page", page);
             payload.put("size", size);
+			payload.put("requestId", requestId);
+			payload.put("callbackUrl", "http://localhost:8080/api/search/country/news-modal-callback");
 
-            // Map을 JSON 문자열로 변환 & kafka로 전송
-            String json = objectMapper.writeValueAsString(payload);
-            kafkaTemplate.send("news-modal", json);
+			CompletableFuture<NewsModalResponse> future = new CompletableFuture<>();
+			pendingCompareResults.put(requestId, future);
 
-            return NewsModalResponse.builder().build();
+			// Map을 JSON 문자열로 변환 & kafka로 전송
+			String json = objectMapper.writeValueAsString(payload);
+			kafkaTemplate.send("news-modal", json);
+
+			// 5초 대기
+			NewsModalResponse data = future.get(5, TimeUnit.SECONDS);
+
+            return data;
 
 		} catch (Exception e) {
 			throw new RuntimeException("뉴스 모달창 데이터 검색 실패", e);
